--- a/.github/workflows/xxk.yml
+++ b/.github/workflows/xxk.yml
@@ -1,21 +1,26 @@
-name: CII
+name: CI
+
 on:
   push:
     tags:
     - '*'
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - name: Prepare signing key
         run: echo '${{ secrets.SIGNING_KEY }}' | base64 -d > signingkey.jks
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
+      
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
   
@@ -27,10 +32,12 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         with:
           arguments: assembleRelease
+      
       - name: Clean up
         run: |
           rm signingkey.jks
           rm -f ${{github.workspace}}/app/build/outputs/apk/release/app-release-unsigned.apk
+      
       - uses: ncipollo/release-action@v1
       - name: Upload to GitHub release
         uses: ncipollo/release-action@v1
